# tq-framework

./: .gitignore  CMakeLists.txt  README.md
glog-master/: CMakeLists.txt
glog-master/src/: logging.cc
glog-master/src/glog/: logging.h.in
glog-master/src/windows/glog/: logging.h
libsodium-1.0.12/: CMakeLists.txt
protobuf-2.6.1/: CMakeLists.txt
soci-master/: CMakeLists.txt
soci-master/src/backends/mysql/: session.cpp
soci-master/src/core/: backend-loader.cpp
sqlite3.11/: CMakeLists.txt
tdf/lib/x64/: TDFAPI30.lib
windows/lib/win32/: curl.lib
windows/lib/x64/: curl.lib
zeromq-4.2.1/: CMakeLists.txt
zeromq-4.2.1/tq/: SodiumConfig.cmake
zeromq-4.2.5/: CMakeLists.txt  Makefile.in  configure
zeromq-4.2.5/builds/: Makefile.in
zeromq-4.2.5/builds/msvc/: Makefile.in
zeromq-4.2.5/doc/: Makefile.in  zmq.html  zmq_atomic_counter_dec.html  zmq_atomic_counter_destroy.html  zmq_atomic_counter_inc.html  zmq_atomic_counter_new.html  zmq_atomic_counter_set.html  zmq_atomic_counter_value.html  zmq_bind.html  zmq_close.html  zmq_connect.html  zmq_ctx_get.html  zmq_ctx_new.html  zmq_ctx_set.html  zmq_ctx_shutdown.html  zmq_ctx_term.html  zmq_curve.html  zmq_curve_keypair.html  zmq_curve_public.html  zmq_disconnect.html  zmq_errno.html  zmq_getsockopt.html  zmq_gssapi.html  zmq_has.html  zmq_inproc.html  zmq_ipc.html  zmq_msg_close.html  zmq_msg_copy.html  zmq_msg_data.html  zmq_msg_get.html  zmq_msg_gets.html  zmq_msg_init.html  zmq_msg_init_data.html  zmq_msg_init_size.html  zmq_msg_more.html  zmq_msg_move.html  zmq_msg_recv.html  zmq_msg_routing_id.html  zmq_msg_send.html  zmq_msg_set.html  (+25 more)
zeromq-4.2.5/tq/: SodiumConfig.cmake
zlib-1.2.11/: CMakeLists.txt
